remove unused class

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="nav-links">
                 <ul id="sidemenu">
-                    <li><a class="navbar-link active-link" href="#home"><span><i class="fa-solid fa-house"></i></span> Home</a></li>
+                    <li><a class="navbar-link" href="#home"><span><i class="fa-solid fa-house"></i></span> Home</a></li>
                     <li><a class="navbar-link" href="#about"><span><i class="fa-solid fa-address-card"></i></span> About me</a></li>
                     <li><a class="navbar-link" href="#services"><span><i class="fa-solid fa-bell-concierge"></i></span> Services</a></li>
                     <li><a id="myWork" class="navbar-link" href="#my-work"><span><i class="fa-solid fa-briefcase"></i></span> My work</a></li>
