fix placeholders in form

--- a/index.html
+++ b/index.html
@@ -374,8 +374,8 @@
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
-                        <input type="text" name="Name" placeholder="Your name" required autocomplete="name" >
-                        <input type="email" name="Email" placeholder="Your email" required autocomplete ="email">
+                        <input type="text" name="Name" placeholder="Name" required autocomplete="name" >
+                        <input type="email" name="Email" placeholder="Email" required autocomplete ="email">
                         <textarea name="Message"  rows="6" placeholder="Your message"></textarea>
                         <button type="submit" class="btn">Submit</button>
                     </form>
