rewrite js code

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                     <div class="animate-logo4"><img src="images/logo4.png" class="parallaxLogo" alt="spinning logo part"></div>
                 </div>
                 <div class="home-text">
-                    <div class="parallax-right">
+                    <div class="text-right">
                         <h1>Hi, I'm <span>Jon</span></h1>
                     </div>
-                    <div class="parallax-left">
+                    <div class="text-left">
                         <p>FULL-STACK DEVELOPER</p>
                         <p>GAME DEVELOPER</p>
                     </div>
@@ -352,6 +352,7 @@
             </div>
         </div>
     </section>
+    <section id="horizontalScroll"></section>
        <!----------------contact------------------>
     <section id="contact">
         <div class="container">
@@ -379,11 +380,14 @@
                     </form>
                 </div>
             </div>
+            <div class="copyright">
+                <p>Copyright <i class="fa-regular fa-copyright"></i> 2023 Jon Mendizabal</p>
+            </div>
+        
+
         </div>
+        
     </section>
-    <div class="copyright">
-        <p>Copyright <i class="fa-regular fa-copyright"></i> 2023 Jon Mendizabal</p>
-    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
