change home scroll animation

--- a/index.html
+++ b/index.html
@@ -35,18 +35,17 @@
 
         <div class="container">
             <div class="home">
-                <div class="hero-image">
-                    <!-- <img src="images/HomeBackground.png" alt=""> -->
-                </div><div class="hero-mobile">
+                <div class="hero-mobile">
                     <img src="images/mobileBackground.png" alt="">
                 </div>
                 <div class="home-logo">
-                    <div class="main-logo"><img src="images/logo1.png" class="parallaxLogo" alt="logo text"></div>
-                    <div class="animate-logo6"><img src="images/logo6.png" class="parallaxLogo" alt="spinning logo part"></div>
-                    <div class="animate-logo2"><img src="images/logo2.png" class="parallaxLogo" alt="spinning logo part"></div>
-                    <div class="animate-logo3"><img src="images/logo3.png" class="parallaxLogo" alt="spinning logo part"></div>
-                    <div class="animate-logo5"><img src="images/logo5.png" class="parallaxLogo" alt="spinning logo part"></div>
-                    <div class="animate-logo4"><img src="images/logo4.png" class="parallaxLogo" alt="spinning logo part"></div>
+                    <img class="main-logo" src="images/logo1.png" alt="logo">
+                        <div class="segment"><div class="segment1"></div></div>
+                        <div class="segment"><div class="segment2"></div></div>
+                        <div class="segment"><div class="segment3"></div></div>
+                        <div class="segment"><div class="segment4"></div></div>
+                        <div class="segment"><div class="segment5"></div></div>
+                        <div class="segment"><div class="segment6"></div></div>    
                 </div>
                 <div class="home-text">
                     <div class="text-right">
