add scroll animation in about section

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <div class="nav-links">
                 <ul id="sidemenu">
                     <li><a class="navbar-link" href="#home"><span><i class="fa-solid fa-house"></i></span> Home</a></li>
-                    <li><a class="navbar-link" href="#about"><span><i class="fa-solid fa-address-card"></i></span> About me</a></li>
-                    <li><a class="navbar-link" href="#services"><span><i class="fa-solid fa-bell-concierge"></i></span> Services</a></li>
-                    <li><a id="myWorkNavLink" class="navbar-link" href="#my-work"><span><i class="fa-solid fa-briefcase"></i></span> My work</a></li>
+                    <li><a class="navbar-link aboutNavLink" href="#about"><span><i class="fa-solid fa-address-card"></i></span> About me</a></li>
+                    <li><a class="navbar-link servicesNavLink" href="#services"><span><i class="fa-solid fa-bell-concierge"></i></span> Services</a></li>
+                    <li><a class="navbar-link myWorkNavLink" href="#my-work"><span><i class="fa-solid fa-briefcase"></i></span> My work</a></li>
                     <li><a class="navbar-link contactNavLink" href="#contact"><span><i class="fa-solid fa-envelope"></i></span> Contact</a></li>
                     <i class="fas fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
@@ -59,7 +59,7 @@
     </section>
     <!----------------about------------------>
     <section id="about">
-        <div class="container">
+        <div class="container aboutContainer">
             <div class="row">
                 <div class="about-col-1">
                     <img src="images/aboutme.png" alt="aboutme">    
