--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                     <a href="images/Jon Mendizabal - Resume.pdf" download class="btn">Download CV</a>
                 </div>
                 <div class="contact-right">
-                    <form action="https://formsubmit.co/el/yocevo" method="POST">
+                    <form action="https://formsubmit.co/053f54e99d64b408f63e62d96b5df0fe " method="POST">
                         <input type="text" name="Name" placeholder="Name" required autocomplete="name" >
                         <input type="email" name="Email" placeholder="Email" required autocomplete ="email">
                         <textarea name="Message"  rows="6" placeholder="Your message"></textarea>
