change aboutme picture color

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
         <div class="container aboutContainer">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/aboutme.png" alt="aboutme">    
+                    <!-- <canvas id="canvas3d"></canvas> -->
+                    <img src="images/aboutme2.png" alt="aboutme">    
                 </div>
                 <div class="about-col-2">
                     <h1><span><i class="fa-solid fa-address-card"></i></span> About me</h1>
@@ -390,6 +391,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/EasePack.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/ScrollToPlugin.min.js"></script>
     <script src="https://kit.fontawesome.com/05049b2b78.js" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
