add image-search website

--- a/index.html
+++ b/index.html
@@ -360,6 +360,30 @@
                 </div>
               </div>
             </div>
+            <div class="website website4">
+              <img src="images/imageSearchApp.png" alt="My Portfolio" />
+              <div class="website-description">
+                <h2>Image Search App</h2>
+                <p>
+                  An image search app that uses Unsplash API. It has a limit of
+                  50 searches/hour.
+                </p>
+                <div class="buttons">
+                  <a
+                    href="https://github.com/Connectslide121/Image-search-app"
+                    title="Repository"
+                    target="_blank"
+                    ><i class="fa-brands fa-github"></i
+                  ></a>
+                  <a
+                    href="https://connectslide121.github.io/Image-search-app/"
+                    title="Visit site"
+                    target="_blank"
+                    ><i class="fa-solid fa-link"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="websitesDates">
             <div class="websiteDate1">
@@ -373,6 +397,10 @@
             <div class="websiteDate3">
               <i class="fa-regular fa-circle"></i>
               <h3>November 2023 - WIP</h3>
+            </div>
+            <div class="websiteDate4">
+              <i class="fa-regular fa-circle"></i>
+              <h3>December 2023</h3>
             </div>
           </div>
           <div id="websitesProgressBar"></div>
