add node.js skillcard

--- a/index.html
+++ b/index.html
@@ -167,6 +167,10 @@
                 <h3>JavaScript</h3>
               </div>
               <div class="skillcard">
+                <img src="images/skill14.png" alt="html" />
+                <h3>Node.js</h3>
+              </div>
+              <div class="skillcard">
                 <img src="images/skill4.png" alt="html" />
                 <h3>React.js</h3>
               </div>
