Add AI image generator website

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
       <div id="websites">
         <div class="container work">
           <h1 id="websitesTitle">
-            <span><i class="fa-solid fa-globe"></i></span> Websites
+            <span><i class="fa-solid fa-globe"></i></span> Front-end
           </h1>
           <div class="website-list">
             <div class="website website1">
@@ -323,27 +323,6 @@
               </div>
             </div>
             <div class="website website2">
-              <img src="images/Spotify.png" alt="Spotify clone" />
-              <div class="website-description">
-                <h2>Spotify clone</h2>
-                <p>A Spotify clone I made for practicing HTML and CSS.</p>
-                <div class="buttons">
-                  <a
-                    href="https://github.com/Connectslide121/Spotify-clone"
-                    title="Repository"
-                    target="_blank"
-                    ><i class="fa-brands fa-github"></i
-                  ></a>
-                  <a
-                    href="https://connectslide121.github.io/Spotify-clone/"
-                    title="Visit site"
-                    target="_blank"
-                    ><i class="fa-solid fa-link"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-            <div class="website website3">
               <img src="images/Portfolio.png" alt="My Portfolio" />
               <div class="website-description">
                 <h2>My portfolio website</h2>
@@ -364,13 +343,13 @@
                 </div>
               </div>
             </div>
-            <div class="website website4">
+            <div class="website website3">
               <img src="images/imageSearchApp.png" alt="My Portfolio" />
               <div class="website-description">
-                <h2>Image Search App</h2>
+                <h2>Image search app</h2>
                 <p>
-                  An image search app that uses Unsplash API. It has a limit of
-                  50 searches/hour.
+                  An image search app that uses Unsplash API. Limited to 50
+                  searches/hour.
                 </p>
                 <div class="buttons">
                   <a
@@ -388,6 +367,30 @@
                 </div>
               </div>
             </div>
+            <div class="website website4">
+              <img src="images/ImageGenerator.png" alt="Image generator" />
+              <div class="website-description">
+                <h2>AI image generator</h2>
+                <p>
+                  An image generator that uses OpenAI API. A valid API key is
+                  required to use it.
+                </p>
+                <div class="buttons">
+                  <a
+                    href="https://github.com/Connectslide121/AI-image-generator"
+                    title="Repository"
+                    target="_blank"
+                    ><i class="fa-brands fa-github"></i
+                  ></a>
+                  <a
+                    href="https://connectslide121.github.io/AI-image-generator/"
+                    title="Visit site"
+                    target="_blank"
+                    ><i class="fa-solid fa-link"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="websitesDates">
             <div class="websiteDate1">
@@ -396,11 +399,11 @@
             </div>
             <div class="websiteDate2">
               <i class="fa-regular fa-circle"></i>
-              <h3>November 2023</h3>
+              <h3>November 2023 - WIP</h3>
             </div>
             <div class="websiteDate3">
               <i class="fa-regular fa-circle"></i>
-              <h3>November 2023 - WIP</h3>
+              <h3>December 2023</h3>
             </div>
             <div class="websiteDate4">
               <i class="fa-regular fa-circle"></i>
@@ -563,7 +566,7 @@
       <div id="programs">
         <div class="container work">
           <h1 id="programsTitle">
-            <span><i class="fa-solid fa-laptop-code"></i></span> Programs
+            <span><i class="fa-solid fa-laptop-code"></i></span> Back-end
           </h1>
           <div class="program-list">
             <div class="program program1">
