change titles in mywork

--- a/test.html
+++ b/test.html
@@ -296,7 +296,7 @@
       <div id="websites">
         <div class="container work">
           <h1 id="websitesTitle">
-            <span><i class="fa-solid fa-globe"></i></span> Front-end projects
+            <span><i class="fa-solid fa-globe"></i></span> Front-end
           </h1>
           <div class="website-list">
             <div class="website website1">
@@ -567,7 +567,6 @@
         <div class="container work">
           <h1 id="programsTitle">
             <span><i class="fa-solid fa-laptop-code"></i></span> Back-end
-            projects
           </h1>
           <div class="program-list">
             <div class="program program1">
