add filter functionality in mywork

--- a/index.html
+++ b/index.html
@@ -139,19 +139,19 @@
                 class="tab-links skills-link active-link"
                 onclick="opentab('skills')"
               >
-                SKILLS
+                Skills
               </h2>
               <h2
                 class="tab-links education-link"
                 onclick="opentab('education')"
               >
-                EDUCATION
+                Education
               </h2>
               <h2
                 class="tab-links experience-link"
                 onclick="opentab('experience')"
               >
-                EXPERIENCE
+                Experience
               </h2>
             </div>
             <div class="tab-contents skills active-tab" id="skills">
@@ -300,19 +300,19 @@
         <span><i class="fa-solid fa-briefcase"></i></span> My projects
       </h1>
       <div class="work-display">
-        <div class="filter">
+        <div class="filters">
           <ul>
-            <li><p>All</p></li>
-            <li><p>Front-end</p></li>
-            <li><p>JavaScript</p></li>
-            <li><p>React</p></li>
-            <li><p>AI</p></li>
-            <li><p>Back-end</p></li>
-            <li><p>My API</p></li>
-            <li><p>External API</p></li>
-            <li><p>SQL</p></li>
-            <li><p>Games</p></li>
-            <li><p>Unity</p></li>
+            <li class="filter active-filter"><p>Unfiltered</p></li>
+            <li class="filter"><p>Front-end</p></li>
+            <li class="filter"><p>JavaScript</p></li>
+            <li class="filter"><p>React</p></li>
+            <li class="filter"><p>AI</p></li>
+            <li class="filter"><p>Back-end</p></li>
+            <li class="filter"><p>API</p></li>
+            <li class="filter"><p>External-API</p></li>
+            <li class="filter"><p>SQL</p></li>
+            <li class="filter"><p>Games</p></li>
+            <li class="filter"><p>Unity</p></li>
           </ul>
         </div>
         <!------------------------------------------------->
@@ -326,7 +326,7 @@
           />
           <div class="work-description">
             <h2>Calculator</h2>
-            <p>A calculator app made with React. My first ever React app</p>
+            <p>A calculator app made with React. My first ever React app.</p>
             <div class="buttons">
               <a
                 href="https://github.com/Connectslide121/Calculator"
@@ -347,7 +347,7 @@
       </div>
       <div class="work-scroller">
         <!----------------project------------------>
-        <div class="work front-end react javascript">
+        <div class="work unfiltered front-end react javascript">
           <img
             class="media"
             src="images/works/calculator.png"
@@ -355,7 +355,7 @@
           />
           <div class="work-description">
             <h2>Calculator</h2>
-            <p>A calculator app made with React. My first ever React app</p>
+            <p>A calculator app made with React. My first ever React app.</p>
             <div class="buttons">
               <a
                 href="https://github.com/Connectslide121/Calculator"
@@ -374,7 +374,7 @@
           </div>
         </div>
         <!----------------project------------------>
-        <div class="work front-end external-api javascript ai">
+        <div class="work unfiltered front-end external-api javascript ai">
           <img
             class="media"
             src="images/works/ImageGenerator.png"
@@ -404,7 +404,7 @@
           </div>
         </div>
         <!----------------project------------------>
-        <div class="work front-end external-api javascript">
+        <div class="work unfiltered front-end external-api javascript">
           <img
             class="media"
             src="images/works/imageSearchApp.png"
@@ -434,7 +434,7 @@
           </div>
         </div>
         <!----------------project------------------>
-        <div class="work front-end games javascript">
+        <div class="work unfiltered front-end games javascript">
           <video
             class="media"
             src="images/works/Sokoban.mp4"
@@ -467,7 +467,7 @@
           </div>
         </div>
         <!----------------project------------------>
-        <div class="work back-end sql my-api">
+        <div class="work unfiltered back-end sql api">
           <img
             class="media"
             src="images/works/Community.png"
@@ -494,7 +494,7 @@
           </div>
         </div>
         <!----------------project------------------>
-        <div class="work games unity">
+        <div class="work unfiltered games unity">
           <video
             class="media"
             src="images/works/PlasticSlurg.mp4"
@@ -526,7 +526,7 @@
           </div>
         </div>
         <!----------------project------------------>
-        <div class="work back-end">
+        <div class="work unfiltered back-end">
           <img
             class="media"
             src="images/works/vendingmachines.jpg"
@@ -547,7 +547,7 @@
           </div>
         </div>
         <!----------------project------------------>
-        <div class="work front-end javascript">
+        <div class="work unfiltered front-end javascript">
           <img
             class="media"
             src="images/works/Portfolio.png"
@@ -576,7 +576,7 @@
           </div>
         </div>
         <!----------------project------------------>
-        <div class="work games unity">
+        <div class="work unfiltered games unity">
           <video
             class="media"
             src="images/works/SlidingPuzzles.mp4"
@@ -609,7 +609,7 @@
           </div>
         </div>
         <!----------------project------------------>
-        <div class="work front-end">
+        <div class="work unfiltered front-end">
           <img
             class="media"
             src="images/works/Spotify.png"
@@ -636,7 +636,7 @@
           </div>
         </div>
         <!----------------project------------------>
-        <div class="work back-end">
+        <div class="work unfiltered back-end">
           <img
             class="media"
             src="images/works/lawnmowers.jpg"
@@ -657,7 +657,7 @@
           </div>
         </div>
         <!----------------project------------------>
-        <div class="work games unity">
+        <div class="work unfiltered games unity">
           <video
             class="media"
             src="images/works/FlapryBlirb.mp4"
@@ -689,7 +689,7 @@
           </div>
         </div>
         <!----------------project------------------>
-        <div class="work front-end">
+        <div class="work unfiltered front-end">
           <img
             class="media"
             src="images/works/PatisserieLente.png"
