create custom color variables

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="nav-links">
           <ul id="sidemenu">
             <li>
-              <a class="navbar-link" href="#home"
+              <a class="navbar-link homeNavLink" href="#home"
                 ><span><i class="fa-solid fa-house"></i></span> Home</a
               >
             </li>
@@ -347,7 +347,7 @@
       </div>
       <div class="work-scroller">
         <!----------------project------------------>
-        <div class="work unfiltered front-end react javascript">
+        <div class="work unfiltered front-end react javascript active-work">
           <img
             class="media"
             src="images/works/calculator.png"
