--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
           <img
             class="media"
             src="images/works/calculator.png"
-            alt="Image generator"
+            alt="Calculator"
           />
           <div class="work-description">
             <h2>Calculator</h2>
@@ -351,7 +351,7 @@
           <img
             class="media"
             src="images/works/calculator.png"
-            alt="Image generator"
+            alt="Calculator"
           />
           <div class="work-description">
             <h2>Calculator</h2>
