--- a/index.html
+++ b/index.html
@@ -413,8 +413,7 @@
           <div class="work-description">
             <h2>Image search app</h2>
             <p>
-              An image search app that uses Unsplash API. Limited to 50
-              searches/hour.
+              An image search app using Unsplash API. Limited to 50 search/hour.
             </p>
             <div class="buttons">
               <a
