Add CodepenAI project

--- a/index.html
+++ b/index.html
@@ -173,55 +173,55 @@
                 <h3>HTML</h3>
               </div>
               <div class="skillcard">
-                <img src="images/skills/skill2.png" alt="html" />
+                <img src="images/skills/skill2.png" alt="css" />
                 <h3>CSS</h3>
               </div>
               <div class="skillcard">
-                <img src="images/skills/skill3.png" alt="html" />
+                <img src="images/skills/skill3.png" alt="javascript" />
                 <h3>JavaScript</h3>
               </div>
               <div class="skillcard">
-                <img src="images/skills/skill14.png" alt="html" />
+                <img src="images/skills/skill14.png" alt="node.js" />
                 <h3>Node.js</h3>
               </div>
               <div class="skillcard">
-                <img src="images/skills/skill4.png" alt="html" />
+                <img src="images/skills/skill4.png" alt="react.js" />
                 <h3>React.js</h3>
               </div>
               <div class="skillcard">
-                <img src="images/skills/skill5.png" alt="html" />
+                <img src="images/skills/skill5.png" alt="c-sharp" />
                 <h3>C#</h3>
               </div>
               <div class="skillcard">
-                <img src="images/skills/skill6.png" alt="html" />
+                <img src="images/skills/skill6.png" alt="sql" />
                 <h3>SQL</h3>
               </div>
               <div class="skillcard">
-                <img src="images/skills/skill12.png" alt="html" />
+                <img src="images/skills/skill12.png" alt="dapper" />
                 <h3>Dapper</h3>
               </div>
               <div class="skillcard">
-                <img src="images/skills/skill13.png" alt="html" />
+                <img src="images/skills/skill13.png" alt="entity framework" />
                 <h3>Entity FW</h3>
               </div>
               <div class="skillcard">
-                <img src="images/skills/skill7.png" alt="html" />
+                <img src="images/skills/skill7.png" alt="unity" />
                 <h3>Unity</h3>
               </div>
               <div class="skillcard">
-                <img src="images/skills/skill8.png" alt="html" />
+                <img src="images/skills/skill8.png" alt="git" />
                 <h3>Git</h3>
               </div>
               <div class="skillcard">
-                <img src="images/skills/skill9.png" alt="html" />
+                <img src="images/skills/skill9.png" alt="github" />
                 <h3>GitHub</h3>
               </div>
               <div class="skillcard">
-                <img src="images/skills/skill10.png" alt="html" />
+                <img src="images/skills/skill10.png" alt="siemens nx" />
                 <h3>NX</h3>
               </div>
               <div class="skillcard">
-                <img src="images/skills/skill11.png" alt="html" />
+                <img src="images/skills/skill11.png" alt="quikcast" />
                 <h3>QuikCAST</h3>
               </div>
             </div>
@@ -335,6 +335,43 @@
       </div>
       <div class="work-scroller-wrapper">
         <div id="work-list" class="work-list">
+          <!----------------project------------------>
+          <div
+            class="work unfiltered front-end react javascript ai external-api"
+          >
+            <img
+              class="media"
+              src="images/works/CodepenAI.png"
+              alt="CodepenAI"
+            />
+            <div class="work-description">
+              <h2>CodepenAI</h2>
+              <p>
+                A codepen style code editor powered by AI using OpenAI API to
+                create code and Unsplash API to add images. Build and modify web
+                apps via prompts or write and modify the code yourself. An
+                OpenAI API key is required to use it.
+              </p>
+              <div class="buttons">
+                <a
+                  href="https://github.com/Connectslide121/codepen-ai"
+                  title="Repository"
+                  target="_blank"
+                  ><i class="fa-brands fa-github"></i
+                  ><span>SOURCE CODE</span></a
+                >
+                <a
+                  href="https://connectslide121.github.io/codepen-ai/"
+                  title="Visit site"
+                  target="_blank"
+                  ><i class="fa-solid fa-link"></i><span>LIVE DEMO</span></a
+                >
+              </div>
+              <div class="work-date">
+                <h3>January 2024 - <span>WIP</span></h3>
+              </div>
+            </div>
+          </div>
           <!----------------project------------------>
           <div class="work unfiltered front-end react javascript">
             <img
@@ -464,7 +501,7 @@
             <img
               class="media"
               src="images/works/Community.png"
-              alt="Vending machines"
+              alt="community"
             />
             <div class="work-description">
               <h2>Community portal</h2>
@@ -548,7 +585,7 @@
             <img
               class="media"
               src="images/works/Portfolio.png"
-              alt="My Portfolio"
+              alt="Portfolio"
             />
             <div class="work-description">
               <h2>My portfolio website</h2>
