add codepenai video

--- a/index.html
+++ b/index.html
@@ -339,11 +339,14 @@
           <div
             class="work unfiltered front-end react javascript ai external-api"
           >
-            <img
+            <video
               class="media"
-              src="images/works/CodepenAI.png"
-              alt="CodepenAI"
-            />
+              src="images/works/CodepenAI.mp4"
+              type="video/mp4"
+              autoplay
+              muted
+              controls
+            ></video>
             <div class="work-description">
               <h2>CodepenAI</h2>
               <p>
